# esets

./: .gitignore  .pre-commit-config.yaml  COMBINATORIALDB.md  COMBINATORICS.md  FLOAT64S.md  INCLUSIONEXCLUSION.md  LICENSE  POKER.md  README.md  TEXTENCODE.md  besets.py  cesets.py  combinatorics.py  docTest.txt  eset.py  esets.py  evens.py  evensDocTest.txt  evensDocTestSmall.txt  integers.py  negatives.py  pairs.py  pairsDocTest.txt  pairsDocTestSmall.txt  pyproject.toml  squares.py  test_esets.py  wholes.py
.github/workflows/: python-package.yml
combinatorics/lib/: combinatorics.py
esets/: __init__.py  besets.py  cesets.py  ecombinatorics.py  eset.py  numeric.py
lib/: ecombinatorics.py
