[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esets-lib"
version = "0.3.1"
description = "Lazy, index-addressable enumerated sets, including a full combinatorics family (permutations, combinations, arrangements, subsets, partitions, derangements, and Cartesian products)"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Francisco Favela" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["combinatorics", "permutations", "combinations", "lazy", "enumeration"]

[project.urls]
Homepage = "https://github.com/ffavela/esets"
Repository = "https://github.com/ffavela/esets"

[tool.hatch.build.targets.wheel]
packages = ["esets"]

[tool.hatch.build.targets.sdist]
# Explicit rather than the broad VCS-based default: a stray untracked,
# non-gitignored venv/ in a dev checkout is enough to break the default
# file selection (an internal absolute symlink it doesn't like), so
# only include exactly what's needed to build/install this project.
include = [
    "/esets",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
